--- a/workshops.html
+++ b/workshops.html
@@ -34,7 +34,7 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="height: 50px; max-height: 50px;">
+                    <img src="images\2Workshop_Header.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="height: 50px; max-height: 50px;">
 
                 </a>
 
@@ -95,7 +95,7 @@
                             <h2>Lettering für Anfänger und Fortgeschrittene</h2>
                             <p>58 € - 63 € Kursgebühr</p>
                         </div>
-                        <img src="images/Workshop_Lettering.jpg" alt="Image" class="img-fluid">
+                        <img src="images/2Workshop_Unterkat_LetterinLernen.PNG" alt="Image" class="img-fluid">
                     </a>
 
                     <a href="special.html" target="_blank" class="work-thumb">
@@ -103,7 +103,7 @@
                             <h2>Winterliche Kränze binden</h2>
                             <p>Adventsstübchen</p>
                         </div>
-                        <img src="images/Kranzbinden_3.JPG" alt="Image" class="img-fluid">
+                        <img src="images/2Workshop_Unterkat_Special.PNG" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -134,7 +134,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/caro.jpg" alt="Caro"></div>
+                            <div class="image align-self-center"><img src="images/2Workshop_caro.jpg" alt="Caro"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Caro</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -153,7 +153,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/Ariane.jpg" alt="Person here"></div>
+                            <div class="image align-self-center"><img src="images/2Workshop_Ariane.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Ariane und Swetlana</h2>
                                 <span class="meta">Kursteilnehmerinnen</span>
@@ -172,7 +172,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/MarieSophie.jpg" alt="Person here"></div>
+                            <div class="image align-self-center"><img src="images/2Workshop_MarieSophie.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Marie-Sophie</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -191,7 +191,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/Theresia.jpg" alt="Person here"></div>
+                            <div class="image align-self-center"><img src="images/2Workshop_Theresia.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Theresia</h2>
                                 <span class="meta">Kursteilnehmerin</span>
@@ -210,7 +210,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/Felix.jpg" alt="Person here"></div>
+                            <div class="image align-self-center"><img src="images/2Workshop_Felix.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Felix</h2>
                                 <span class="meta">Kursteilnehmer</span>
@@ -230,7 +230,7 @@
                 <div class="item">
                     <div class="block-33 h-100">
                         <div class="vcard d-flex mb-3">
-                            <div class="image align-self-center"><img src="images/Melle.jpg" alt="Person here"></div>
+                            <div class="image align-self-center"><img src="images/2Workshop_Melle.jpg" alt="Person here"></div>
                             <div class="name-text align-self-center">
                                 <h2 class="heading">Melle</h2>
                                 <span class="meta">Kursteilnehmerin</span>
