--- a/workshops.html
+++ b/workshops.html
@@ -34,7 +34,7 @@
         <nav class="navbar navbar-expand-lg  bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images\2Workshop_Header.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="height: 50px; max-height: 50px;">
+                    <img src="images\Website_Logo_IMG_0091.PNG" alt="Lettering im Stall Logo im Header" title="Lettering im Stall" style="height: 50px; max-height: 50px;">
 
                 </a>
 
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/Titelbild_LetteringLernen.JPG');">
+         style="background-image: url('images/2Workshop_Header.PNG');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
