--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/Titelbild_shop.jpg');">
+         style="        background-image: url('images/5SHOP_Header.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
@@ -108,7 +108,7 @@
                             <p>individuell</p>
 
                         </div>
-                        <img src="images/Gutschein_1000x1000vorne" alt="Image" class="img-fluid">
+                        <img src="images/5Shop_Unterkat_Gutschein.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
                 
@@ -118,7 +118,7 @@
                             <h2>Personalisierte Fußmatten</h2>
                             <p>ab 34 €</p>
                         </div>
-                        <img src="images/Fußmatte_ICKERT.jpg" alt="Image" class="img-fluid">
+                        <img src="images/5SHOP_Unterkat_Fußmatte.jpg" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
@@ -129,7 +129,7 @@
                             <h2>Personalisierte Trockenblumenkränze</h2>
                             <p>ab 30 €</p>
                         </div>
-                        <img src="images/Blumenkranz.jpg" alt="Image" class="img-fluid">
+                        <img src="images/5SHOP_Unterkat_Blumenkranz.JPG" alt="Image" class="img-fluid">
                     </a>
                 </div>
 
