--- a/fussmatte.html
+++ b/fussmatte.html
@@ -37,7 +37,7 @@
     </header>
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/Fußmatte_PÜTZ1800.jpg');">
+         style="        background-image: url('images/5SHOP_Header_Fußmatte.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll">
