--- a/gutscheinbestellen.html
+++ b/gutscheinbestellen.html
@@ -38,7 +38,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/Gutschein_1800x1200hinten');">
+         style="        background-image: url('images/5SHOP_Header_Gutschein.jpg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
