--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -68,7 +68,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="background-image: url('images/Workshop_Lettering_Anmeldung.jpg');">
+         style="background-image: url('images/2Workshop_Unterkat_LetteringLernen_Header.PNG');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12 smooth-scroll" >
