--- a/derstall.html
+++ b/derstall.html
@@ -97,24 +97,24 @@
         <div class="container">
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="images/Website_4DerStall_Lettering im Stall-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-1000p.jpg" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_q1" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h6" alt="Image" class="img-fluid"></a>
 
                 </div>
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
                     <!--<a href="images/Lettering im Stall-77.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>-->
-                    <a href="images/Stall_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Stall_1000p.JPG" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_q2" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h8" alt="Image" class="img-fluid"></a>
                 </div>
 
             </div>
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
                     <!--<a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>-->                    
-                    <a href="images/Website_4DerStall_Lettering im Stall-56-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-56-1000p.jpg" alt="Image" class="img-fluid"></a>                    
+                    <a href="images/4DerStall_h3" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h9" alt="Image" class="img-fluid"></a>                    
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="images/Website_4DerStall_Lettering im Stall-74-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-74-1000p.jpg" alt="Image" class="img-fluid"></a>                    
-                    <a href="images/Website_4DerStall_Lettering im Stall-45-1500p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-45-1500p.jpg" alt="Image" class="img-fluid"></a>                    
+                    <a href="images/4DerStall_h4" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h10" alt="Image" class="img-fluid"></a>                    
+                    <a href="images/4DerStall_h5" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h11JPG" alt="Image" class="img-fluid"></a>                    
                 </div>
 
             </div>
@@ -130,7 +130,7 @@
                 <div class="col-lg-6 ml-auto pl-lg-4 mb-5 order-2">
 
                     <!--<img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid mb-5">-->
-                    <a href="images/Anstossen_1800p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_q7" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid"></a>
 
                     <!--<span class="d-block text-uppercase text-primary">About US</span>-->
                     <h2 class="mb-4 section-title">Gemeinsam kreativ sein</h2>
