--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -162,7 +162,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="F 07.10.2023">Fortgeschritten: Sa, 07.10.2023 11-14 Uhr (63 €)</option>
+                                    <option value="F 22.10.2023">Fortgeschritten: So, 22.10.2023 11-14 Uhr (63 €)</option>
                                     <option value="A 21.10.2023">Anfänger: Sa, 21.10.2023 11-14 Uhr (58 €) - nur noch 2 freie Plätze</option>
                                     <option value="A 25.11.2023">Anfänger: Sa, 25.11.2023 14-17 Uhr (58 €)</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
