--- a/derstall.html
+++ b/derstall.html
@@ -103,14 +103,14 @@
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
                     <!--<a href="images/Lettering im Stall-77.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>-->
-                    <a href="images/4DerStall_q2" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h8" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_Zeile1-1.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h8" alt="Image" class="img-fluid"></a>
                 </div>
 
             </div>
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
                     <!--<a href="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/5D31BB04-0629-49AA-A5AB-AF0399E9F73E_2000p.JPG" alt="Image" class="img-fluid"></a>-->                    
-                    <a href="images/4DerStall_h3" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h9" alt="Image" class="img-fluid"></a>                    
+                    <a href="images/4DerStall_Zeile1-1.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h9" alt="Image" class="img-fluid"></a>                    
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
                     <a href="images/4DerStall_h4" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h10" alt="Image" class="img-fluid"></a>                    
