--- a/derstall.html
+++ b/derstall.html
@@ -71,7 +71,7 @@
 
     <!-- Startbild -->
     <div class="slider-item overlay" data-stellar-background-ratio="0.5"
-         style="        background-image: url('images/4DerStall_Header.jpg');">
+         style="        background-image: url('images/4DerStall_Header.jpeg');">
         <div class="container">
             <div class="row slider-text align-items-center justify-content-center">
                 <div class="col-lg-12 text-center col-sm-12">
@@ -97,7 +97,7 @@
         <div class="container">
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="images/4DerStall_Zeile1-1.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_Zeile1-2" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_Zeile1-1.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_Zeile1-2.jpeg" alt="Image" class="img-fluid"></a>
 
                 </div>
 
