--- a/derstall.html
+++ b/derstall.html
@@ -103,7 +103,7 @@
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
                     <!--<a href="images/Lettering im Stall-77.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>-->
-                    <a href="images/4DerStall_Zeile1-1.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h8" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_h3.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h4.jpeg" alt="Image" class="img-fluid"></a>
                 </div>
 
             </div>
