--- a/derstall.html
+++ b/derstall.html
@@ -130,7 +130,7 @@
                 <div class="col-lg-6 ml-auto pl-lg-4 mb-5 order-2">
 
                     <!--<img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid mb-5">-->
-                    <a href="images/4DerStall_q7" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h3.JPG" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_q2.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_q2.jpeg" alt="Image" class="img-fluid"></a>
 
                     <!--<span class="d-block text-uppercase text-primary">About US</span>-->
                     <h2 class="mb-4 section-title">Gemeinsam kreativ sein</h2>
