--- a/derstall.html
+++ b/derstall.html
@@ -152,12 +152,12 @@
 
                 <div class="row mb-5 no-gutters">
                     <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                        <a href="images/Website_4DerStall_Lettering im Stall-31-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-31-1000p.jpg" alt="Image" class="img-fluid"></a>
-                        <a href="images/Website_4DerStall_Lettering im Stall-33-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-33-1000p.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="images/4DerStall_h10.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h10.jpeg" alt="Image" class="img-fluid"></a>
+                        <a href="images/4DerStall_h8.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h8.jpeg" alt="Image" class="img-fluid"></a>
                     </div>
                     <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                        <a href="images/Website_4DerStall_Lettering im Stall-123-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-123-1000p.jpg" alt="Image" class="img-fluid"></a>
-                        <a href="images/Website_4DerStall_Lettering im Stall-124-1000p.jpg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Website_4DerStall_Lettering im Stall-124-1000p.jpg" alt="Image" class="img-fluid"></a>
+                        <a href="images/4DerStall_h5.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h5.jpeg" alt="Image" class="img-fluid"></a>
+                        <a href="images/4DerStall_h3.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h3.jpeg" alt="Image" class="img-fluid"></a>
                     </div>
 
                 </div>
