--- a/derstall.html
+++ b/derstall.html
@@ -103,7 +103,7 @@
 
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="200">
                     <!--<a href="images/Lettering im Stall-77.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/Radio_pano1000p.JPG" alt="Image" class="img-fluid"></a>-->
-                    <a href="images/4DerStall_h4.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h4.jpeg" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_q2.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_q2.jpeg" alt="Image" class="img-fluid"></a>
                 </div>
 
             </div>
@@ -130,7 +130,7 @@
                 <div class="col-lg-6 ml-auto pl-lg-4 mb-5 order-2">
 
                     <!--<img src="images/Anstossen_1800p.JPG" alt="Image" class="img-fluid mb-5">-->
-                    <a href="images/4DerStall_q2.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_q2.jpeg" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_h4.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h4.jpeg" alt="Image" class="img-fluid"></a>
 
                     <!--<span class="d-block text-uppercase text-primary">About US</span>-->
                     <h2 class="mb-4 section-title">Gemeinsam kreativ sein</h2>
@@ -142,7 +142,7 @@
                 <div class="col-lg-6 order-1">
                     <figure class="img-dotted-bg">
                         <!--<img src="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" alt="Image" class="img-fluid">-->
-                        <a href="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/42970609-10D7-461A-8043-ECD4490ECC1E_1000p.JPG" alt="Image" class="img-fluid"></a>
+                        <a href="images/4DerStall_Zeile1-1.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_Zeile1-1.jpeg" alt="Image" class="img-fluid"></a>
                     </figure>
 
                 </div>
