--- a/derstall.html
+++ b/derstall.html
@@ -97,7 +97,7 @@
         <div class="container">
             <div class="row mb-5 no-gutters">
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="100">
-                    <a href="images/4DerStall_Zeile1-2.png" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_Zeile1-2.png" alt="Image" class="img-fluid"></a>
+                    <a href="images/4DerStall_Zeile1-1.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_Zeile1-1.jpeg" alt="Image" class="img-fluid"></a>
 
                 </div>
 
@@ -113,8 +113,7 @@
                     <a href="images/4DerStall_h9.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h9.jpeg" alt="Image" class="img-fluid"></a>                    
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade" data-aos-delay="400">
-                    <a href="images/4DerStall_h11.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h11.jpeg" alt="Image" class="img-fluid"></a>                    
-                    <a href="images/4DerStall_h6.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h6.jpeg" alt="Image" class="img-fluid"></a>                    
+                    <a href="images/4DerStall_h11.jpeg" class="mb-3 d-block" data-fancybox="gal" style="border: 10px solid #fff;"><img src="images/4DerStall_h11.jpeg" alt="Image" class="img-fluid"></a>                                       
                 </div>
 
             </div>
