--- a/workshops.html
+++ b/workshops.html
@@ -93,7 +93,7 @@
                     <a href="letteringlernen.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Lettering für Anfänger und Fortgeschrittene</h2>
-                            <p>58 € - 63 € Kursgebühr</p>
+                            <p>58 € - 63 €</p>
                         </div>
                         <img src="images/2Workshop_Unterkat_LetterinLernen.PNG" alt="Image" class="img-fluid">
                     </a>
@@ -101,7 +101,23 @@
                     <a href="special.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Winterliche Kränze binden</h2>
-                            <p>Adventsstübchen</p>
+                            <p>45 €</p>
+                        </div>
+                        <img src="images/2Workshop_Unterkat_Special.PNG" alt="Image" class="img-fluid">
+                    </a>
+
+                    <a href="letteringlernen.html" target="_blank" class="work-thumb">
+                        <div class="work-text">
+                            <h2>Lettering für Anfänger und Fortgeschrittene</h2>
+                            <p>58 € - 63 €</p>
+                        </div>
+                        <img src="images/2Workshop_Unterkat_LetterinLernen.PNG" alt="Image" class="img-fluid">
+                    
+
+                    href="special.html" target="_blank" class="work-thumb">
+                        <div class="work-text">
+                            <h2>Winterliche Kränze binden</h2>
+                            <p>45 €</p>
                         </div>
                         <img src="images/2Workshop_Unterkat_Special.PNG" alt="Image" class="img-fluid">
                     </a>
