--- a/special.html
+++ b/special.html
@@ -159,9 +159,9 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="281123">Di, 28.11.23 18 Uhr</option>
-                                    <option value="011223">Sa, 01.12.23 16 Uhr</option>
-                                    <option value="021223">So, 02.12.23 10 Uhr</option>
+                                    <option value="Di, 28.11.23 18 Uhr">Di, 28.11.23 18 Uhr</option>
+                                    <option value="Fr, 01.12.23 16 Uhr">Fr, 01.12.23 16 Uhr</option>
+                                    <option value="Sa, 02.12.23 10 Uhr">Sa, 02.12.23 10 Uhr</option>
                                     
                                     
 
