--- a/special.html
+++ b/special.html
@@ -159,7 +159,7 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Fr, 01.12.23 16 Uhr">Fr, 01.12.23 16 Uhr - nur noch 2 freie Plätze</option>
+                                    <option value="Fr, 01.12.23 16 Uhr">Fr, 01.12.23 16 Uhr - nur noch 1 freier Plätze</option>
                                     <option value="Sa, 02.12.23 10 Uhr">Sa, 02.12.23 10 Uhr</option>
                                     
                                     
