--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -92,8 +92,8 @@
 
                             <p>
                                 <p>Hast Du Lust die Kunst des schönen Schreibens zu lernen?</p>
-                                <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Anfänger-Workshop zeige ich Dir neben den Basics des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
-                                <p>Im darauf aufbauenden Fortgeschrittenen-Workshop vertiefen wir Deine Brushlettering-Kenntnisse, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
+                                <p>Egal ob Du Anfänger bist oder Du Dich schon mal im Lettering versucht hast: Im Basic-Workshop zeige ich Dir neben den Grundlagen des Hand- und Brushletterings verschiedene Schriftstile, mit welchen Du im Workshop Dein erstes Schriftbild gestalten kannst.</p>
+                                <p>Im Brushlettering-Workshop vertiefen wir Deine Kenntnisse mit den Pinselstiften, setzen uns mit der Komposition von Schriften auseinander und erweitern Deine Lettering-Fähigkeiten um Effekte zur Hintergrundgestaltung und Blending-Techniken. Beide Kurse dauern circa 3 Stunden.</p>
                                 <p>
                                     <strong class="d-block text-black">Im Kurspreis inklusive:</strong>
                                     <ul>
@@ -162,9 +162,9 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="F 22.10.2023">Fortgeschritten: So, 22.10.2023 11-14 Uhr (63 €)</option>
-                                    <option value="A 21.10.2023">Anfänger: Sa, 21.10.2023 11-14 Uhr (58 €) - nur noch 2 freie Plätze</option>
-                                    <option value="A 25.11.2023">Anfänger: Sa, 25.11.2023 14-17 Uhr (58 €)</option>
+                                    <option value="F 22.10.2023">Brushlettering-Kurs: So, 22.10.2023 11-14 Uhr (63 €)</option>
+                                    <option value="A 21.10.2023">Basis-Kurs: Sa, 21.10.2023 11-14 Uhr (58 €) - nur noch 2 freie Plätze</option>
+                                    <option value="A 25.11.2023">Basic-Kurs: Sa, 25.11.2023 14-17 Uhr (58 €)</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
