--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -162,9 +162,10 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="F 22.10.2023">Brushlettering-Kurs: So, 22.10.2023 11-14 Uhr (63 €)</option>
-                                    <option value="A 21.10.2023">Basis-Kurs: Sa, 21.10.2023 11-14 Uhr (58 €) - nur noch 2 freie Plätze</option>
-                                    <option value="A 25.11.2023">Basic-Kurs: Sa, 25.11.2023 14-17 Uhr (58 €)</option>
+                                    <option value="A 17.02.2024">Basic Lettering-Kurs: Sa, 17.02.2024 11-14 Uhr (58 €)</option>
+                                    <option value="A 10.03.2024">Basic Lettering-Kurs: So, 10.03.2024 11-14 Uhr (58 €)</option>
+                                    <option value="A 29.03.2024">Basic Lettering-Kurs: Fr, 29.03.2024 11-14 Uhr (58 €)</option>
+                                    <option value="F 30.03.2024">Brush Lettering-Kurs: Sa, 30.03.2024 11-14 Uhr (63 €)</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benchrichtige mich bei neuen Terminen.</option>
                                     
 
