--- a/special.html
+++ b/special.html
@@ -97,7 +97,7 @@
                                         
                                         Der Kurs dauert circa 2 Stunden. Im Anschluss seid ihr im heimeligen Weihnachtsmarkt noch zu frisch gebackenen Waffeln, winterlichem Punsch und Glühwein eingeladen.</p>
                                     <p>
-                                        <strong class="d-block text-black">Im Kurspreis von 45 € inklusive:</strong>
+                                        <strong class="d-block text-black">Im Kurspreis inklusive:</strong>
                                         <ul>
                                             <li style="list-style: disc; display: list-item; margin-left:5px;">Frisches Grünzeug, welches wir erst kurzfristig vor dem ersten Workshop schneiden und kühl lagern</li>
                                             <li style="list-style: disc; display: list-item; margin-left:5px;">Deko-Elemente, Schnüre und Band sowie Werkzeug wie Draht- und Gartenschere und einen self-made Römer (Unterkranz)</li>
