--- a/workshops.html
+++ b/workshops.html
@@ -101,7 +101,7 @@
                     <a href="special.html" target="_blank" class="work-thumb">
                         <div class="work-text">
                             <h2>Winterliche Kränze binden</h2>
-                            <p>45 €</p>
+                            <p>Aktuell nicht verfügbar</p>
                         </div>
                         <img src="images/2Workshop_Unterkat_Special.PNG" alt="Image" class="img-fluid">
                     </a>
