--- a/letteringlernen.html
+++ b/letteringlernen.html
@@ -162,8 +162,8 @@
                                 <label for="full-name">Termin wählen</label>
                                 <select name="Gewaehlter-Kurs" required class="form-control " style="height:50px">
                                     <option value="" selected="" disabled="">Hier findest du alle freien Termine</option>
-                                    <option value="Sonntag, 01.12.2024, 11:00 Uhr">Sonntag, 01.12.2024, 11:00 Uhr</option>
-                                    <option value="Freitag, 13.12.2024, 17:30 Uhr">Freitag, 13.12.2024, 17:30 Uhr</option>
+                                    <option value="Basic-Kurs: Sonntag, 01.12.2024, 11:00 Uhr">Basic-Kurs: Sonntag, 01.12.2024, 11:00 Uhr</option>
+                                    <option value="Basic-Kurs: Freitag, 13.12.2024, 17:30 Uhr">Basic-Kurs: Freitag, 13.12.2024, 17:30 Uhr</option>
                                     <option value="Benachrichtige mich bei neuen Terminen.">Benachrichtige mich bei neuen Terminen.</option>
                                     
 
